// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MembersPanel > should display an empty result if no matching members found 1`] = `
"<div class="ml-2">
  <oc-search-bar-stub label="Filter members" icon="search" placeholder="Search for members" small="false" buttonlabel="Search" buttonhidden="true" typeahead="false" trimquery="true" loading="false" isfilter="false" loadingaccessiblelabel="" showcancelbutton="false" cancelbuttonappearance="raw" cancelbuttoncolorrole="secondary" isrounded="false" cancelhandler="[Function]" modelvalue="no-match" class="mr-2 mt-4"></oc-search-bar-stub>
  <div data-testid="space-members">
    <div>
      <h3 class="font-semibold text-base">No members found</h3>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`MembersPanel > should render all members accordingly to their role assignments 1`] = `
"<div class="ml-2">
  <oc-search-bar-stub label="Filter members" icon="search" placeholder="Search for members" small="false" buttonlabel="Search" buttonhidden="true" typeahead="false" trimquery="true" loading="false" isfilter="false" loadingaccessiblelabel="" showcancelbutton="false" cancelbuttonappearance="raw" cancelbuttoncolorrole="secondary" isrounded="false" cancelhandler="[Function]" modelvalue="" class="mr-2 mt-4"></oc-search-bar-stub>
  <div data-testid="space-members">
    <!--v-if-->
    <div class="mb-4" data-testid="group-members">
      <h3 class="font-semibold text-base">Members</h3>
      <members-role-section-stub groupmembers="undefined"></members-role-section-stub>
    </div>
  </div>
</div>"
`;
